# pharmaBuddy-tauri

./: .env.example  .gitignore  README.md  commercial_registry.seed.json  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: barcode_fallback.rs  barcode_hook.rs  catalog_cache.rs  commercial_registry.rs  env_config.rs  eprescription.rs  galinos.rs  lib.rs  main.rs  recommendation.rs
