[package]
name = "pharmabuddy-tauri"
version = "0.1.0"
description = "PharmaBuddy AI orb desktop widget"
authors = ["pharmaBuddy"]
edition = "2021"

[lib]
name = "pharmabuddy_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
rand = "0.8"
tokio = { version = "1", features = ["time", "rt"] }
scraper = "0.27.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
